--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,14 @@ body {
     padding-left: 15px;
 }
 
+.tree-group .group-link{
+    color: var(--secondary-color);
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 600;
+    display: block;
+    margin: 10px 0;
+}
 .tree-item {
     padding: 5px 0;
     cursor: pointer;
