--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,10 @@ body {
     padding-left: 15px;
 }
 
+input[id^="chapter-"] {
+    scroll-margin-top: 180px;
+}
+
 .tree-group .group-link{
     color: var(--secondary-color);
     text-decoration: none;
